# embeddings_game

./: .gitignore  flightcontrol.json  nixpacks.toml
.flightcontrol/: config.json
backend/: main.py  pyproject.toml  requirements.txt
frontend/: nixpacks.toml  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: EmotionPlot.tsx  GameControls.tsx
frontend/src/data/: emotions.ts
frontend/src/store/: gameStore.ts
frontend/src/types/: index.ts
