[tool.poetry]
name = "emotion-embeddings-backend"
version = "0.1.0"
description = "Backend for emotion embeddings visualization"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sentence-transformers = "^2.2.2"
numpy = "^1.26.2"
pydantic = "^2.5.2"
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 